# dlsite_opds

./: .dockerignore  .env.example  AGENTS.md  DEVELOPERS.md  Dockerfile  INFRA.md  LICENSE  README.md  docker-compose.app.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml  provision-and-deploy.yml  release.yml  restart-opds.yml
dlsite_opds/: __main__.py  app.py
dlsite_opds/core/: auth.py  config.py  http_utils.py  play_client.py  progress.py
dlsite_opds/routes/: covers.py  downloads.py  opds.py  pages.py  progress.py
dlsite_opds/services/: cbz.py  chapters.py  feeds.py  image_cache.py  libraries.py  pse.py  work_resolver.py
infra/digitalocean/: Caddyfile  cloud-init.yml  docker-compose.caddy.yml  reload-dlsite-opds-caddy.sh
scripts/: ensure-firewall.sh  provision-digitalocean.sh
tests/: conftest.py  test_app_startup.py  test_cbz.py  test_client_pool.py  test_covers.py  test_crypt_download.py  test_e2e.py  test_feed_resolution_cache.py  test_feeds.py  test_image_cache.py  test_pages.py  test_prefetch.py  test_progress.py  test_pse.py
